@@ -7,7 +7,7 @@
   <parent>
     <groupId>org.slf4j</groupId>
     <artifactId>slf4j-parent</artifactId>
-    <version>2.0.18-SNAPSHOT</version>
+    <version>3.0.0-alpha0-SNAPSHOT</version>
     <relativePath>../parent/pom.xml</relativePath>
   </parent>
 
@@ -37,11 +37,11 @@
 
     <dependency>
       <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-api</artifactId>
-      <type>test-jar</type>
+      <artifactId>slf4j-testing</artifactId>
       <version>${project.version}</version>
       <scope>test</scope>
     </dependency>
+
   </dependencies>
 
 
@@ -52,18 +52,53 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
-          <forkCount>1</forkCount>
-          <reuseForks>false</reuseForks>
-          <reportFormat>plain</reportFormat>
-          <trimStackTrace>false</trimStackTrace>
-          <excludes>
-            <exclude>**/AllTest.java</exclude>
-            <exclude>**/PackageTest.java</exclude>
-          </excludes>
-          <!--<argLine>-Xdebug -Xnoagent -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=8001</argLine> -->
-          <!--<argLine>XXadd-opens log4j/org.apache.log4j=org.slf4j.log4j12</argLine>-->
+          <!--
+          java.lang.IllegalAccessException: class org.apache.log4j.helpers.OptionConverter
+          (in module ch.qos.reload4j) cannot access class org.slf4j.reload4j.testHarness.RecursiveAppender
+          (in module org.slf4j.reload4j) because module org.slf4j.reload4j does not export org.slf4j.reload4j.testHarness
+           to module ch.qos.reload4j
+
+          -->
+          <argLine>
+            --add-opens org.slf4j.reload4j/org.slf4j.reload4j.testHarness=ch.qos.reload4j
+          </argLine>
         </configuration>
       </plugin>
+      <!--        <executions>-->
+      <!--          <execution>-->
+      <!--            <id>default-test</id>-->
+      <!--            <configuration>-->
+      <!--              <parallel>classes</parallel>-->
+      <!--              <threadCount>8</threadCount>-->
+      <!--              <forkCount>1C</forkCount>-->
+      <!--              <reuseForks>true</reuseForks>-->
+      <!--              <reportFormat>plain</reportFormat>-->
+      <!--              <trimStackTrace>false</trimStackTrace>-->
+      <!--              <excludes>-->
+      <!--                <exclude>**/AllTest.java</exclude>-->
+      <!--                <exclude>**/PackageTest.java</exclude>-->
+      <!--                <exclude>org.slf4j.reload4j.EventFieldsTest</exclude>-->
+      <!--                <exclude>org.slf4j.testing.MultithreadedInitializationTest</exclude>-->
+      <!--              </excludes>-->
+      <!--            </configuration>-->
+      <!--          </execution>-->
+
+      <!--          <execution>-->
+      <!--            <id>singleJVM</id>-->
+      <!--            <goals>-->
+      <!--              <goal>test</goal>-->
+      <!--            </goals>-->
+      <!--            <configuration>-->
+      <!--              <forkCount>4</forkCount>-->
+      <!--              <reuseForks>false</reuseForks>-->
+      <!--              <includes>-->
+      <!--                <include>org.slf4j.testing.MultithreadedInitializationTest</include>-->
+      <!--                <include>org.slf4j.reload4j.EventFieldsTest</include>-->
+      <!--              </includes>-->
+      <!--            </configuration>-->
+      <!--          </execution>-->
+      <!--        </executions>-->
+      <!--      </plugin>-->
 
     </plugins>
   </build>
